Project/V1.0/cdk.out/ProjectAtallaVpcStack.template.json
{
 "Resources": {
  "vpcatallaweb4BEE7EE3": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.10.10.0/24",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-atalla-web"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/Resource"
   }
  },
  "vpcatallawebpublicsubnetSubnet1Subnet9196B15F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "AvailabilityZone": "eu-central-1a",
    "CidrBlock": "10.10.10.0/25",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet1/Subnet"
   }
  },
  "vpcatallawebpublicsubnetSubnet1RouteTable298557A0": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet1/RouteTable"
   }
  },
  "vpcatallawebpublicsubnetSubnet1RouteTableAssociation3DD1AC3C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebpublicsubnetSubnet1RouteTable298557A0"
    },
    "SubnetId": {
     "Ref": "vpcatallawebpublicsubnetSubnet1Subnet9196B15F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet1/RouteTableAssociation"
   }
  },
  "vpcatallawebpublicsubnetSubnet1DefaultRoute1ADB47E5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebpublicsubnetSubnet1RouteTable298557A0"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcatallawebIGW935096D2"
    }
   },
   "DependsOn": [
    "vpcatallawebVPCGWDBAC3C2F"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet1/DefaultRoute"
   }
  },
  "vpcatallawebpublicsubnetSubnet2SubnetF3A7515D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "AvailabilityZone": "eu-central-1b",
    "CidrBlock": "10.10.10.128/25",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet2/Subnet"
   }
  },
  "vpcatallawebpublicsubnetSubnet2RouteTable7794F5BB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet2/RouteTable"
   }
  },
  "vpcatallawebpublicsubnetSubnet2RouteTableAssociation908E52EA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebpublicsubnetSubnet2RouteTable7794F5BB"
    },
    "SubnetId": {
     "Ref": "vpcatallawebpublicsubnetSubnet2SubnetF3A7515D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet2/RouteTableAssociation"
   }
  },
  "vpcatallawebpublicsubnetSubnet2DefaultRoute5501E451": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebpublicsubnetSubnet2RouteTable7794F5BB"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcatallawebIGW935096D2"
    }
   },
   "DependsOn": [
    "vpcatallawebVPCGWDBAC3C2F"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet2/DefaultRoute"
   }
  },
  "vpcatallawebIGW935096D2": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-atalla-web"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/IGW"
   }
  },
  "vpcatallawebVPCGWDBAC3C2F": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "InternetGatewayId": {
     "Ref": "vpcatallawebIGW935096D2"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/VPCGW"
   }
  },
  "webaclA21B3BBA": {
   "Type": "AWS::EC2::NetworkAcl",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/Resource"
   }
  },
  "webaclDefaultAssociationProjectAtallaVpcStackvpcatallawebpublicsubnetSubnet145A15B80659D4334": {
   "Type": "AWS::EC2::SubnetNetworkAclAssociation",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "SubnetId": {
     "Ref": "vpcatallawebpublicsubnetSubnet1Subnet9196B15F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/DefaultAssociationProjectAtallaVpcStackvpcatallawebpublicsubnetSubnet145A15B80/Resource"
   }
  },
  "webaclrulehttpipv4ingress3F8B8309": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 100,
    "CidrBlock": "0.0.0.0/0",
    "Egress": false,
    "PortRange": {
     "From": 80,
     "To": 80
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-http-ipv4-ingress/Resource"
   }
  },
  "webaclrulehttpsipv4ingress8172A9E0": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 110,
    "CidrBlock": "0.0.0.0/0",
    "Egress": false,
    "PortRange": {
     "From": 443,
     "To": 443
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-https-ipv4-ingress/Resource"
   }
  },
  "webaclrulesshingressEFAB5ADE": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 120,
    "CidrBlock": "10.20.20.128/25",
    "Egress": false,
    "PortRange": {
     "From": 22,
     "To": 22
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-ssh-ingress/Resource"
   }
  },
  "webaclruleephemeralingressipv4F51E1F57": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 130,
    "CidrBlock": "0.0.0.0/0",
    "Egress": false,
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-ephemeral-ingress-ipv4/Resource"
   }
  },
  "webaclrulehttpipv6ingress391110B2": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 140,
    "Egress": false,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 80,
     "To": 80
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-http-ipv6-ingress/Resource"
   }
  },
  "webaclrulehttpsipv6ingressC0480EA8": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 150,
    "Egress": false,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 443,
     "To": 443
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-https-ipv6-ingress/Resource"
   }
  },
  "webaclruleephemeralipv6ingress28DDA4E6": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 160,
    "Egress": false,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-ephemeral-ipv6-ingress/Resource"
   }
  },
  "webaclrulehttpipv4egressBECF5EF8": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 100,
    "CidrBlock": "0.0.0.0/0",
    "Egress": true,
    "PortRange": {
     "From": 80,
     "To": 80
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-http-ipv4-egress/Resource"
   }
  },
  "webaclrulehttpsipv4egress95B6928D": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 110,
    "CidrBlock": "0.0.0.0/0",
    "Egress": true,
    "PortRange": {
     "From": 443,
     "To": 443
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-https-ipv4-egress/Resource"
   }
  },
  "webaclruleephemeralegressipv4F6B1EE08": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 120,
    "CidrBlock": "0.0.0.0/0",
    "Egress": true,
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-ephemeral-egress-ipv4/Resource"
   }
  },
  "webaclrulehttpipv6egress3355EC91": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 130,
    "Egress": true,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 80,
     "To": 80
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-http-ipv6-egress/Resource"
   }
  },
  "webaclrulehttpsipv6egressD6D12039": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 140,
    "Egress": true,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 443,
     "To": 443
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-https-ipv6-egress/Resource"
   }
  },
  "webaclruleephemeralipv6egress5EDDC8F8": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 150,
    "Egress": true,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-ephemeral-ipv6-egress/Resource"
   }
  },
  "webSG9F367DE6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "ProjectAtallaVpcStack/webSG",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:443",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     },
     {
      "CidrIp": "10.20.20.128/25",
      "Description": "from 10.20.20.128/25:22",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     },
     {
      "CidrIpv6": "::/0",
      "Description": "from ::/0:80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIpv6": "::/0",
      "Description": "from ::/0:443",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/webSG/Resource"
   }
  },
  "vpcatallaadmin09930B01": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.20.20.0/24",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-atalla-admin"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/Resource"
   }
  },
  "vpcatallaadminpublicsubnetSubnet1Subnet8FCCAAC4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaadmin09930B01"
    },
    "AvailabilityZone": "eu-central-1a",
    "CidrBlock": "10.20.20.0/25",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet1/Subnet"
   }
  },
  "vpcatallaadminpublicsubnetSubnet1RouteTable62F1F1C8": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaadmin09930B01"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet1/RouteTable"
   }
  },
  "vpcatallaadminpublicsubnetSubnet1RouteTableAssociation42FF1452": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet1RouteTable62F1F1C8"
    },
    "SubnetId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet1Subnet8FCCAAC4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet1/RouteTableAssociation"
   }
  },
  "vpcatallaadminpublicsubnetSubnet1DefaultRoute8EEB320C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet1RouteTable62F1F1C8"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcatallaadminIGWB761A07F"
    }
   },
   "DependsOn": [
    "vpcatallaadminVPCGW3324FAEC"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet1/DefaultRoute"
   }
  },
  "vpcatallaadminpublicsubnetSubnet2Subnet1D7DDB73": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaadmin09930B01"
    },
    "AvailabilityZone": "eu-central-1b",
    "CidrBlock": "10.20.20.128/25",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet2/Subnet"
   }
  },
  "vpcatallaadminpublicsubnetSubnet2RouteTableA1872FC3": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaadmin09930B01"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet2/RouteTable"
   }
  },
  "vpcatallaadminpublicsubnetSubnet2RouteTableAssociation00D7C1B5": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet2RouteTableA1872FC3"
    },
    "SubnetId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet2Subnet1D7DDB73"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet2/RouteTableAssociation"
   }
  },
  "vpcatallaadminpublicsubnetSubnet2DefaultRouteEF5A2069": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet2RouteTableA1872FC3"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcatallaadminIGWB761A07F"
    }
   },
   "DependsOn": [
    "vpcatallaadminVPCGW3324FAEC"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet2/DefaultRoute"
   }
  },
  "vpcatallaadminIGWB761A07F": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-atalla-admin"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/IGW"
   }
  },
  "vpcatallaadminVPCGW3324FAEC": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaadmin09930B01"
    },
    "InternetGatewayId": {
     "Ref": "vpcatallaadminIGWB761A07F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/VPCGW"
   }
  },
  "adminacl57A9013A": {
   "Type": "AWS::EC2::NetworkAcl",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaadmin09930B01"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/Resource"
   }
  },
  "adminaclDefaultAssociationProjectAtallaVpcStackvpcatallaadminpublicsubnetSubnet200F244F2A14E7532": {
   "Type": "AWS::EC2::SubnetNetworkAclAssociation",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "SubnetId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet2Subnet1D7DDB73"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/DefaultAssociationProjectAtallaVpcStackvpcatallaadminpublicsubnetSubnet200F244F2/Resource"
   }
  },
  "adminaclrulesshingresshomeB67D5E83": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 100,
    "CidrBlock": "217.103.21.122/32",
    "Egress": false,
    "PortRange": {
     "From": 22,
     "To": 22
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-ssh-ingress-home/Resource"
   }
  },
  "adminaclrulerdpingresshomeF1B15081": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 110,
    "CidrBlock": "217.103.21.122/32",
    "Egress": false,
    "PortRange": {
     "From": 3389,
     "To": 3389
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-rdp-ingress-home/Resource"
   }
  },
  "adminaclruleephemeralingressweb54574B40": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 120,
    "CidrBlock": "10.10.10.0/25",
    "Egress": false,
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-ephemeral-ingress-web/Resource"
   }
  },
  "adminaclruleephemeralipv6ingress283CC324": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 130,
    "Egress": false,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-ephemeral-ipv6-ingress/Resource"
   }
  },
  "adminaclruleephemeralingressA2300C8B": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 140,
    "CidrBlock": "0.0.0.0/0",
    "Egress": false,
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-ephemeral-ingress/Resource"
   }
  },
  "adminaclrulesshegresswebE2403150": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 100,
    "CidrBlock": "10.10.10.0/25",
    "Egress": true,
    "PortRange": {
     "From": 22,
     "To": 22
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-ssh-egress-web/Resource"
   }
  },
  "adminaclrulehttpipv6egress53B2E37D": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 110,
    "Egress": true,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 80,
     "To": 80
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-http-ipv6-egress/Resource"
   }
  },
  "adminaclrulehttpsipv6egress65AB2009": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 120,
    "Egress": true,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 443,
     "To": 443
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-https-ipv6-egress/Resource"
   }
  },
  "adminaclruleephemeralegresshome0485A1B1": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 130,
    "CidrBlock": "217.103.21.122/32",
    "Egress": true,
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-ephemeral-egress-home/Resource"
   }
  },
  "adminaclrulehttpingresshome3759213B": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 140,
    "CidrBlock": "0.0.0.0/0",
    "Egress": true,
    "PortRange": {
     "From": 80,
     "To": 80
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-http-ingress-home/Resource"
   }
  },
  "adminaclrulehttpsingresshome517DD7AE": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 150,
    "CidrBlock": "0.0.0.0/0",
    "Egress": true,
    "PortRange": {
     "From": 443,
     "To": 443
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-https-ingress-home/Resource"
   }
  },
  "adminSG897E7E8B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "ProjectAtallaVpcStack/adminSG",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "217.103.21.122/32",
      "Description": "from 217.103.21.122/32:22",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     },
     {
      "CidrIp": "217.103.21.122/32",
      "Description": "from 217.103.21.122/32:3389",
      "FromPort": 3389,
      "IpProtocol": "tcp",
      "ToPort": 3389
     }
    ],
    "VpcId": {
     "Ref": "vpcatallaadmin09930B01"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/adminSG/Resource"
   }
  },
  "atallapeering": {
   "Type": "AWS::EC2::VPCPeeringConnection",
   "Properties": {
    "PeerVpcId": {
     "Ref": "vpcatallaadmin09930B01"
    },
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/atalla_peering"
   }
  },
  "admintowebroute": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet2RouteTableA1872FC3"
    },
    "DestinationCidrBlock": "10.10.10.0/25",
    "VpcPeeringConnectionId": {
     "Fn::GetAtt": [
      "atallapeering",
      "Id"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin_to_web_route"
   }
  },
  "webtoadminroute": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebpublicsubnetSubnet1RouteTable298557A0"
    },
    "DestinationCidrBlock": "10.20.20.128/25",
    "VpcPeeringConnectionId": {
     "Fn::GetAtt": [
      "atallapeering",
      "Id"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web_to_admin_route"
   }
  },
  "wsKeyPair": {
   "Type": "AWS::EC2::KeyPair",
   "Properties": {
    "KeyName": "ws_KeyPair2390",
    "Tags": [
     {
      "Key": "name",
      "Value": "web-key"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/ws_KeyPair"
   }
  },
  "mngKeyPair": {
   "Type": "AWS::EC2::KeyPair",
   "Properties": {
    "KeyName": "mng_KeyPair2390",
    "Tags": [
     {
      "Key": "name",
      "Value": "admin-key"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/mng_KeyPair"
   }
  },
  "webserverInstanceRoleB42A7E22": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/web_server"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web_server/InstanceRole/Resource"
   }
  },
  "webserverInstanceRoleDefaultPolicy7779DA28": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "s3:GetBucket*",
        "s3:GetObject*",
        "s3:List*"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":s3:::",
           {
            "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
           },
           "/*"
          ]
         ]
        },
        {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":s3:::",
           {
            "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
           }
          ]
         ]
        }
       ]
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "webserverInstanceRoleDefaultPolicy7779DA28",
    "Roles": [
     {
      "Ref": "webserverInstanceRoleB42A7E22"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web_server/InstanceRole/DefaultPolicy/Resource"
   }
  },
  "webserverInstanceProfileA537705D": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "webserverInstanceRoleB42A7E22"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web_server/InstanceProfile"
   }
  },
  "webserverA71B539D": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "eu-central-1a",
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/xvda",
      "Ebs": {
       "DeleteOnTermination": true,
       "Encrypted": true,
       "KmsKeyId": {
        "Fn::ImportValue": "ProjectAtallaKmsStack:ExportsOutputFnGetAttEBSWebKeyD2E07230Arn5F1C58A3"
       },
       "VolumeSize": 8
      }
     }
    ],
    "IamInstanceProfile": {
     "Ref": "webserverInstanceProfileA537705D"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t3.micro",
    "KeyName": "ws_KeyPair2390",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "webSG9F367DE6",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "vpcatallawebpublicsubnetSubnet1Subnet9196B15F"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/web_server"
     }
    ],
    "UserData": {
     "Fn::Base64": {
      "Fn::Join": [
       "",
       [
        "#!/bin/bash\nmkdir -p $(dirname '/tmp/3ade43aa0b4830fc7b9e2ee6d8f20cb2376f2c73c01267f72b06e35e23c54dce.sh')\naws s3 cp 's3://",
        {
         "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
        },
        "/3ade43aa0b4830fc7b9e2ee6d8f20cb2376f2c73c01267f72b06e35e23c54dce.sh' '/tmp/3ade43aa0b4830fc7b9e2ee6d8f20cb2376f2c73c01267f72b06e35e23c54dce.sh'\nset -e\nchmod +x '/tmp/3ade43aa0b4830fc7b9e2ee6d8f20cb2376f2c73c01267f72b06e35e23c54dce.sh'\n'/tmp/3ade43aa0b4830fc7b9e2ee6d8f20cb2376f2c73c01267f72b06e35e23c54dce.sh'"
       ]
      ]
     }
    }
   },
   "DependsOn": [
    "webserverInstanceRoleDefaultPolicy7779DA28",
    "webserverInstanceRoleB42A7E22"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web_server/Resource"
   }
  },
  "adminserverInstanceRole293D3FAF": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/admin_server"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin_server/InstanceRole/Resource"
   }
  },
  "adminserverInstanceProfile3C08ACB6": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "adminserverInstanceRole293D3FAF"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin_server/InstanceProfile"
   }
  },
  "adminserverBE7C02BE": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "eu-central-1b",
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/xvda",
      "Ebs": {
       "DeleteOnTermination": true,
       "Encrypted": true,
       "KmsKeyId": {
        "Fn::ImportValue": "ProjectAtallaKmsStack:ExportsOutputFnGetAttEBSAdminKey7632249CArn4F0137C3"
       },
       "VolumeSize": 8
      }
     }
    ],
    "IamInstanceProfile": {
     "Ref": "adminserverInstanceProfile3C08ACB6"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiwindowslatestWindowsServer2022EnglishFullBaseC96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t3.micro",
    "KeyName": "mng_KeyPair2390",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "adminSG897E7E8B",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet2Subnet1D7DDB73"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/admin_server"
     }
    ],
    "UserData": {
     "Fn::Base64": "<powershell></powershell>"
    }
   },
   "DependsOn": [
    "adminserverInstanceRole293D3FAF"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin_server/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31Ry27CMBD8Fu7GpaBKvQZUIVSpskLFFW3MAibJGtlrRVHEv9d50FAOPe3seLwzXs/l20LOJlD5qT7k08Jkstky6FxEat+gnstmd9VidaSdWgkVssLobcgIueVGlNrA+A1ZgSM/con3VhtgY+lX3IINMbqoXANjBfVgM3QJxyDnEonFF3JlXZ7oopU8dL3RSDwZ/Xc8sh/Erv47uKe2qIMzXK+dDddu3jMR0ypEZ+i0skSo78afWCswTmzIM5AeHtvjmzBQyia1/a66qmzca5dhRHe9cvZoinjNL/bgPbKXSVtiL5dB58hL8PE4RW+D670UOCgxLld00vilp5ixs3tQxcwH00a+CVXz2dLLQr7O5Pvk4o2ZukBsSpRpX38AxFnr/isCAAA="
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2"
  },
  "SsmParameterValueawsserviceamiwindowslatestWindowsServer2022EnglishFullBaseC96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-windows-latest/Windows_Server-2022-English-Full-Base"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Outputs": {
  "ExportsOutputRefwebserverA71B539DD8DF1B3F": {
   "Value": {
    "Ref": "webserverA71B539D"
   },
   "Export": {
    "Name": "ProjectAtallaVpcStack:ExportsOutputRefwebserverA71B539DD8DF1B3F"
   }
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
